finally go the stupid authentication check to work

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jquery": "^3.5.1",
+    "jsdom": "^16.2.2",
     "mongoose": "^5.9.16",
     "mongoose-findorcreate": "^3.0.0",
     "nodemon": "^2.0.4",
