--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "aws-sdk": "^2.723.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "gridfs-stream": "^1.1.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
     "mongoose": "^5.9.16",
