--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "app.js",
   "dependencies": {
     "aws-sdk": "^2.723.0",
+    "blob": "^0.1.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "file-class": "^0.1.3",
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
     "mongoose": "^5.9.16",
     "mongoose-findorcreate": "^3.0.0",
+    "multer": "^1.4.2",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {},
   "scripts": {
