--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.16",
     "mongoose-findorcreate": "^3.0.0",
     "multer": "^1.4.2",
